--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/MeetingAssistant_NET46.csproj
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/MeetingAssistant_NET46.csproj
@@ -241,6 +241,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
+    <Content Include="LEAP.mp4" />
     <Content Include="mic128.png" />
     <Content Include="save.svg" />
     <Content Include="Scripts\azureUpload.js" />
